--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
           <div
             data-aos="fade-left"
             data-aos-duration="1500"
-            data-aos-easing="ease-in-sine"
+            data-aos-easing="linear"
           >
             <div class="">
               <p class="header_tag">
@@ -246,7 +246,7 @@
           <div
             data-aos="fade-left"
             data-aos-duration="2000"
-            data-aos-easing="ease-in-sine"
+            data-aos-easing="linear"
           >
             <div class="">
               <img src="/assets/info.svg" alt="" />
@@ -273,7 +273,7 @@
           <div
             data-aos="fade-left"
             data-aos-duration="2500"
-            data-aos-easing="ease-in-sine"
+            data-aos-easing="linear"
           >
             <div class="">
               <img src="/assets/woman.svg" alt="" />
